# GameEngineExample

./: .gitignore  build_script.bat  build_script.sh  engine_documentation.txt  readme.txt  run_script.bat
Project/: CMakeLists.txt
Project/Sources/: main.cpp
Project/Sources/Application/: application.cpp  application_data.h
Project/Sources/Engine/: input.cpp  transform2d.cpp
Project/Sources/Engine/Render/: world_renderer.cpp  world_renderer.h
Project/Sources/Game/: game.cpp
